# edge-tts

./: .gitignore  README.md  docker-compose.yml  qwen_tts_client.py  requirement.md  tts_demo.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Dockerfile  requirements.txt  test_qwen_tts.py
backend/app/: main.py
backend/app/api/v1/endpoints/: openai_tts.py  text.py  tts.py
backend/app/core/: config.py  security.py
backend/app/schemas/: tts.py
backend/app/services/: base.py  chunker.py  edge_engine.py  llm_transcriber.py  pipeline.py  polyphone.py  qwen_engine.py  registry.py  text_preprocessor.py  volcengine_engine.py
docker/qwen3-tts-pytorch/: .dockerignore  Dockerfile  generate-ref-audios.sh  pyproject.toml  server.py
docker/qwen3-tts-server/: .dockerignore  CMakeLists.txt  Dockerfile  server.cpp
docs/: API_DESIGN.md  CURL_TIMEOUT_GUIDE.md  IMPLEMENTATION_GUIDE.md  PROJECT_PLAN.md  QWEN3_TTS_DEPLOYMENT.md  QWEN_INTEGRATION_SUMMARY.md  QWEN_TTS_USAGE.md  VOLCENGINE_TTS.md
extension/: package-lock.json  package.json  vite.config.ts
extension/src/: manifest.json
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/offscreen/: audio-player.ts  index.html
extension/src/sidepanel/: SidePanel.vue  index.html  main.ts
