[project]
name = "qwen3-tts-pytorch-server"
version = "0.1.0"
description = "Qwen3-TTS Python Server with faster-qwen3-tts + CUDA Graph"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "faster-qwen3-tts",
    "transformers>=4.46.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
